resolved photo app alignemnt

--- a/nextmagentacloud21/core/css/server.css
+++ b/nextmagentacloud21/core/css/server.css
@@ -2129,6 +2129,7 @@
   }
   .photos-navigation {
     margin-top: 1rem !important;
+    margin-left: 0.5rem;
   }
 
   .app-photos .app-navigation-toggle:before{
@@ -2137,14 +2138,14 @@
 
   .app-photos .app-navigation-toggle
   {
-    top: 24px !important;
+    top: 26px !important;
     width: 24px !important;
     height: 24px !important;
     min-width: 24px !important;
     min-height: 24px !important;
     background: var(--icon-menu-custom) !important;
     padding: 0 !important;
-    margin-right: -36px !important;
+    margin-right: -32px !important;
   }
 
   .app-photos .photos-navigation__back{
@@ -2166,13 +2167,22 @@
   }
 
   .app-photos .grid-title{
-    padding: 65px 0 12px 0 !important;
-    font-size: 20px;
+    padding: 1.7rem 0 0.75rem 1rem !important;
+    font-size: 1.25rem;
   }
 
   .grid-container{
     padding: 0 0 10rem 2rem !important;
   }
+
+  .app-photos button:not(:disabled):not(.primary):hover{
+    background-color:unset !important;
+  }
+
+  .app-photos .photos-navigation__title{
+    padding: 0 !important;
+  }
+
   /* photos app*/
 
   /*Responsive Styling*/
@@ -2248,8 +2258,8 @@
  }
 
  @media (min-width: 0px) and (max-width: 410px){
- .grid-container[data-v-e945440a] {
-     padding: 0 0 10rem 2rem !important;
+ .grid-container {
+     padding: 0 0 10rem 0 !important;
   }
  }
 
@@ -2530,8 +2540,12 @@
  }
 
  @media (min-width: 700px) and (max-width: 1024px){
-  .grid-container{
-    padding:0px 0 256px 2rem !important;
+  .app-photos .grid-container{
+    padding:0 0 10rem 1rem !important;
+  }
+  .app-photos .photos-navigation{
+    margin-left: 1.5rem;
+    padding: 0 !important;
   }
 }
  @media screen and (max-width: 420px) {
